[project]
name = "ayman-cal"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "bokeh>=3.7.3",
    "dataretrieval>=1.0.12",
    "matplotlib>=3.10.5",
    "mpi4py>=4.1.1",
    "netcdf4>=1.7.2",
    "pandas>=2.3.2",
    "pathos>=0.3.4",
    "seaborn>=0.13.2",
    "spotpy>=1.6.6",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "xarray>=2025.8.0",
]
