[project]
name = "ayman-cal"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "dataretrieval>=1.0.12",
    "matplotlib>=3.10.5",
    "netcdf4>=1.7.2",
    "pandas>=2.3.2",
    "spotpy>=1.6.6",
    "tensorboard-plugin-hydrograph>=0.1.1",
    "tensorboardx>=2.6.4",
    "xarray>=2025.8.0",
]
